# tray-item-rs

examples/windows/: Cargo.toml
examples/windows/src/: main.rs
src/: lib.rs
src/api/windows/: funcs.rs  mod.rs  structs.rs
