[package]
name = "windows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
enigo = "0.1.3"
tray-item = { path = "../../" }
winreg = "0.51.0"

[build-dependencies]
embed-resource = "2.3"
